--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div
                     style="width: 80px; height: 80px; border-radius: 50%; background: url('images/Saran\ Nithish\ T\ S.png') no-repeat center/cover; border: 2px solid #0078d7;">
                 </div>
-                <h1>Saran Nithish T S</h1>
+                <h1>Saran Nithish T S !</h1>
             </div>
             <br>
             <b>"I believe in my way of working—steady, focused, and always forward."</b>
