--- a/Experience.html
+++ b/Experience.html
@@ -36,7 +36,7 @@
             </ul>
             <p>
                 Also read:
-                <a href="Projects.html" target="_blank"> <span style="color:  #0078d7;">Projects</span></a>
+                <a href="Projects.html" > <span style="color:  #0078d7;">Projects</span></a>
             </p>
         </section>
     </div>
