--- a/Projects.html
+++ b/Projects.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header></header>
     <div class="container">
         <section id="about" class="section">
             <div style="display: flex; align-items: center; gap: 1rem;">
