--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 More about me:
                 <a href="https://drive.google.com/file/d/1k5HI47AbjK9SF5rF-bXWjnKqZQLkwE6Y/view?usp=drive_link"
                     target="_blank"> <span style="color: #0078d7;">Resume</span></a>,
-                <a href="Experience.html" target="_blank"> <span style="color: #0078d7;">Experience</span></a>,
-                <a href="Projects.html" target="_blank"> <span style="color:  #0078d7;">Projects</span></a>
+                <a href="Experience.html" > <span style="color: #0078d7;">Experience</span></a>,
+                <a href="Projects.html" > <span style="color:  #0078d7;">Projects</span></a>
             </p>
             <div class="social-media">
                 <a href="mailto:sarannithish069@gmail.com" target="_blank" title="Email">
