--- a/Projects.html
+++ b/Projects.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+
+    </header>
     <div class="container">
         <section id="about" class="section">
             <div style="display: flex; align-items: center; gap: 1rem;">
@@ -18,7 +20,7 @@
             </div>
             <b>"Turning ideas into impactful solutions, one project at a time."</b> <br>
             <P>
-                Some of my works are:
+                Some of my works are::
             <ul>
                 <li>
                     <div>
