--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="https://www.instagram.com/saran__nithish/" target="_blank" title="Instagram">
                     <img src="logo/instagram.png" alt="Instagram" class="social-icon">
                 </a>
-                <a href="https://www.linkedin.com/in/sarannithish2972/" target="_blank" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/sarannithish/" target="_blank" title="LinkedIn">
                     <img src="logo/linkedin.png" alt="LinkedIn" class="social-icon">
                 </a>
                 <a href="https://github.com/SaranNithish2972" target="_blank" title="GitHub">
