--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     Grew up in Tirupur, India.
                 </li>
                 <li>
+                    Residing in Coimbatore, India.
+                </li>
+                <li>
                     <div>
                         Pursuing <span style="color: #0078d7;">Master's</span> degree in Decision and Computing
                         Sciences.
