--- a/Experience.html
+++ b/Experience.html
@@ -26,7 +26,7 @@
                 Internship experience:
             <ul>
                 <li>
-                    <b>Record Innovations</b> - <i>Software Engineering Intern</i> - <span style="color: grey;">(Dec
+                    <b>Record Innovations</b> - <i>Software Engineer</i> - <span style="color: grey;">(Dec
                         2024 - Present)</span>
                 </li>
                 <li>
